--- a/versions-latex-tex/Física_para_Mates_Propuesta_de_Implementación_1/propuesta-implementacion-1.tex
+++ b/versions-latex-tex/Física_para_Mates_Propuesta_de_Implementación_1/propuesta-implementacion-1.tex
@@ -458,4 +458,70 @@ Los resultados del cuestionario no afectan la nota de los estudiantes en ningún
 
 \vspace{1cm}
 
+%======================================================================
+\chapter{Banco de Ítems para Mini–Evaluaciones}
+%======================================================================
+
+Este capítulo recoge los ítems propuestos para las mini–evaluaciones. Cada conjunto de ítems puede ser utilizado de manera flexible según necesidad de la sesión correspondiente.
+
+%--------------------------------------------------
+\section{Cinemática 1 — Frenada de emergencia}
+%--------------------------------------------------
+
+\begin{enumerate}
+\item El auto A viaja a \(v_A = 30\,\text{m/s}\) y el auto B a \(v_B = 20\,\text{m/s}\). La distancia inicial es \(D = 40\,\text{m}\) y la aceleración de frenado es \(a = 3\,\text{m/s}^2\). Usando la condición de seguridad \((v_A - v_B)^2 < 2aD\), determina si habrá colisión.
+
+\item Dos autos se mueven con \(v_A = 27\,\text{m/s}\) y \(v_B = 18\,\text{m/s}\), separados por \(D = 35\,\text{m}\). Encuentra la aceleración mínima \(a_{\min}\) que asegura que no haya colisión.
+
+\item Con \(v_A = 32\,\text{m/s}\), \(v_B = 24\,\text{m/s}\) y aceleración \(a = 4\,\text{m/s}^2\):  
+(a) Calcula la distancia mínima \(D_{\min}\).  
+(b) Evalúa si la situación es segura cuando \(D = 20\,\text{m}\).
+
+\item Recordando que en la simulación trabajaste en el plano \((D, \Delta v)\), donde la frontera está dada por \(\Delta v = \sqrt{2aD}\), indica si la región segura se encuentra por encima o por debajo de la curva. Justifica usando la desigualdad de seguridad.
+
+\item Sabiendo que \((\Delta v_1, D_1)\) es seguro, analiza si el par \((2\Delta v_1, 2D_1)\) es necesariamente seguro, necesariamente peligroso o depende del caso.
+\end{enumerate}
+
+%--------------------------------------------------
+\section{Balística 1 — Rescate de la pelota}
+%--------------------------------------------------
+
+\begin{enumerate}
+\item Para \(v_0 = 20\,\text{m/s}\), calcula \(\alpha = g / v_0^2\). Luego decide si el punto \(P_1 = (6\,\text{m}, 9\,\text{m})\) es alcanzable comparando con la parábola de seguridad.
+
+\item Para \(v_0 = 20\,\text{m/s}\):  
+(a) Decide si el punto \(P_2 = (4\,\text{m}, 10\,\text{m})\) es alcanzable.  
+(b) Repite para \(P_3 = (10\,\text{m}, 5\,\text{m})\).  
+(c) Indica cuál está más cerca del límite de lo alcanzable.
+
+\item Escribe \(\alpha = g / v_0^2\). Si reemplazas \(v_0\) por \(2v_0\), expresa \(\alpha_{\text{nuevo}}\) en términos de \(\alpha\) y discute cómo cambia la región alcanzable.
+
+\item Explica por qué, cuando un punto \((x,y)\) es alcanzable, suelen existir dos soluciones de ángulo: un ángulo bajo y un ángulo alto.
+\end{enumerate}
+
+%--------------------------------------------------
+\section{Balística 2 — Desafío del arquero}
+%--------------------------------------------------
+
+\begin{enumerate}
+\item Usando  
+\(y_f(x_c) = x_c \tan\theta - \frac{g}{2v_0^2 \cos^2\theta} x_c^2\),  
+calcula la altura al pasar por \(x = x_c\).
+
+\item Dados dos anillos con centros \((x_{c1}, y_{c1})\), \((x_{c2}, y_{c2})\) y radios \(R_1, R_2\), evalúa para un disparo \((v_0,\theta)\) si pasa por ambos verificando:  
+\(-R_i < y_f(x_{ci}) - y_{ci} < R_i\).
+
+\item Da dos modificaciones en los anillos que siempre reducen el espacio de soluciones \((\theta, v_0)\). Explica por qué.
+
+\item El tiempo total de vuelo es \(T = \frac{2 v_0 \sin\theta}{g}\). Explica por qué la componente vertical \(v_0 \sin\theta\) es la que más afecta el tiempo de vuelo, y cuál de las dos soluciones (arco alto o bajo) tendrá mayor tiempo de vuelo.
+
+\item Explica por qué la solución de arco alto tiende a facilitar el paso por dos anillos consecutivos, relacionándolo con el tiempo de vuelo y la altura máxima.
+
+\item Considera el caso en que los dos anillos tienen el mismo centro y radio. Muestra cómo se reduce el sistema  
+\(-R_i < y_f(x_{ci}) - y_{ci} < R_i\)  
+y por qué no cambia la región de soluciones respecto al caso de un solo anillo.
+\end{enumerate}
+
+% End of inserted chapter
+
 \end{document}
